# SpotifyGTK

./: .editorconfig  .gitignore  README.md  THIRD_PARTY_LICENSES  meson.build  meson_options.txt
.github/workflows/: build.yml  release.yml
apps/spotify-connect/: meson.build  meson_options.txt
apps/spotify-connect/build-profiles/: nightly.ini  stable.ini
apps/spotify-connect/data/: com.github.spotifygtk.SpotifyConnect.desktop.in  com.github.spotifygtk.SpotifyConnect.gschema.xml  meson.build
apps/spotify-connect/po/: POTFILES
apps/spotify-connect/src/: api.c  auth.c  auth.h  image_cache.c  main.c  meson.build
apps/spotify-connect/src/ui/: window.c
apps/spotify-connect/tests/: meson.build  test_api.c  test_image_cache.c
apps/spotify-connect/tools/: print-token.c
apps/spotify-native/: meson.build  meson_options.txt
apps/spotify-native/build-profiles/: nightly.ini  stable.ini
apps/spotify-native/src/: main.c  meson.build
apps/spotify-native/src/audio/: decoder.c  meson.build  output.c  output.h  output_pipewire.c
apps/spotify-native/src/spotify/: ap.c  ap.h  audio_key.c  audio_key.h  cdn.c  dh.c  dh.h  handshake_constants.h  handshake_crypto.c  handshake_crypto.h  mercury.c  mercury.h  meson.build  native_auth.c  native_auth.h  protobuf_min.c  protobuf_min.h  shannon.c
apps/spotify-native/tests/: meson.build  test_dh.c  test_login_encoding.c  test_native_auth.c  test_protobuf.c  test_shannon.c
build-profiles/: nightly.ini  stable.ini
data/: com.github.spotifygtk.SpotifyGTK.desktop.in  com.github.spotifygtk.SpotifyGTK.gschema.xml  meson.build
docs/: README.md
research/auth/: README.md
research/connect/: README.md
research/metadata/: README.md
research/playback/: README.md
src/: api.c  api.h  app.c  app.h  auth.c  image_cache.c  image_cache.h  main.c  meson.build  player.c  player.h
src/audio/: decoder.h  output_alsa.c  output_pulse.c  output_wasapi.c
src/spotify/: ap.c  ap.h  cdn.h  connect.c  connect.h  meson.build  shannon.c  shannon.h
src/ui/: now_playing.c  now_playing.h  search_page.c  search_page.h  window.c  window.h
tests/: meson.build  test_auth.c  test_shannon.c
