option('profile',
  type: 'combo',
  choices: ['stable', 'nightly'],
  value: 'stable',
  description: 'Build track: stable (broad compat) or nightly (bleeding edge)')

option('spotify_client_id',
  type: 'string',
  value: '',
  description: 'Spotify application Client ID (developer.spotify.com). Can also be set via SPOTIFY_CLIENT_ID env var at runtime.')

option('redirect_port',
  type: 'integer',
  value: 8888,
  description: 'Local OAuth redirect listener port')

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build unit tests')

# ── Optional hardware/library acceleration ──────────────────────────────────
# All of these are runtime-probed even when enabled at compile time — if the
# feature isn't actually present at runtime (e.g. no VA-API capable GPU),
# SpotifyGTK falls through to the next tier silently. Disabling at compile
# time just strips the code path entirely for minimal binary size.

option('enable_vaapi',
  type: 'boolean',
  value: false,
  description: 'Compile VA-API hardware JPEG decode path (nightly default: true)')

option('enable_pipewire',
  type: 'boolean',
  value: false,
  description: 'Compile native PipeWire audio output (nightly default: true)')

option('enable_dmabuf',
  type: 'boolean',
  value: false,
  description: 'Compile GdkDmabufTexture zero-copy path, requires GTK 4.14+')

option('audio_backend',
  type: 'combo',
  choices: ['pulse', 'alsa', 'pipewire'],
  value: 'pulse',
  description: 'Default Linux audio output backend (others remain available as runtime fallback)')
