option('profile',
  type: 'combo',
  choices: ['stable', 'nightly'],
  value: 'stable',
  description: 'Build track: stable (broad compat) or nightly (bleeding edge)')

option('spotify_client_id',
  type: 'string',
  value: '',
  description: 'Spotify application Client ID (developer.spotify.com). Can also be set via SPOTIFY_CLIENT_ID env var at runtime.')

option('redirect_port',
  type: 'integer',
  value: 8888,
  description: 'Local OAuth redirect listener port')

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build unit tests')

# ── Optional hardware acceleration for the image cache ──────────────────────
# Runtime-probed even when enabled at compile time -- if VA-API isn't
# actually present at runtime, the image cache falls through to
# libjpeg-turbo or stb_image silently. Disabling at compile time just
# strips the code path entirely for minimal binary size.

option('enable_vaapi',
  type: 'boolean',
  value: false,
  description: 'Compile VA-API hardware JPEG decode path (nightly default: true)')

option('enable_dmabuf',
  type: 'boolean',
  value: false,
  description: 'Compile GdkDmabufTexture zero-copy path, requires GTK 4.14+')
